--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "strapi-health-plugin",
-  "version": "1.1.1",
+  "version": "1.2.0-beta.0",
   "description": "A Strapi plugin for supporting Kubernetes health checks",
   "strapi": {
     "name": "health",
