--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "strapi-health-plugin",
   "version": "1.2.1",
-  "description": "A Strapi plugin for supporting Kubernetes health checks",
+  "description": "A Strapi plugin for supporting Kubernetes health checks and monitoring",
+  "main": "strapi-server.js",
   "strapi": {
     "name": "health",
-    "description": "A simple health endpoint",
+    "description": "A simple health endpoint for monitoring and Kubernetes readiness/liveness probes",
     "kind": "plugin"
   },
   "dependencies": {
     "prop-types": "^15.7.2"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.29.7",
     "@strapi/typescript-utils": "^4.6.0",
     "@types/node": "^20.8.2",
     "typescript": "5.0.4"
@@ -20,32 +22,53 @@
   },
   "scripts": {
     "develop": "tsc -p tsconfig.server.json -w",
-    "build": "tsc -p tsconfig.server.json"
+    "build": "tsc -p tsconfig.server.json",
+    "test": "echo \"No tests yet\" && exit 0",
+    "changeset": "changeset",
+    "release:publish": "changeset publish",
+    "prepublishOnly": "npm run build"
   },
   "author": {
-    "name": "Remi Kristelijn"
+    "name": "Remi Kristelijn",
+    "email": "remi@kristelijn.com",
+    "url": "https://github.com/rkristelijn"
   },
   "maintainers": [
     {
-      "name": "Remi Kristelijn"
+      "name": "Remi Kristelijn",
+      "email": "remi@kristelijn.com"
     }
   ],
   "engines": {
-    "node": ">=16.0.0 <=22.x.x",
-    "npm": ">=6.0.0"
+    "node": ">=18.0.0 <=22.x.x",
+    "npm": ">=8.0.0"
   },
-  "gitRepository": "https://github.com/rkristelijn/strapi-health-plugin.git",
   "keywords": [
     "strapi",
-    "Kubernetes",
+    "strapi-plugin",
+    "kubernetes",
     "health",
     "healthcheck",
     "health-check",
-    "health endpoint"
+    "monitoring",
+    "readiness",
+    "liveness",
+    "probe"
   ],
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git@github.com:rkristelijn/strapi-health-plugin.git"
-  }
+    "url": "https://github.com/rkristelijn/strapi-health-plugin.git"
+  },
+  "bugs": {
+    "url": "https://github.com/rkristelijn/strapi-health-plugin/issues"
+  },
+  "homepage": "https://github.com/rkristelijn/strapi-health-plugin#readme",
+  "files": [
+    "dist",
+    "server",
+    "strapi-server.js",
+    "README.md",
+    "LICENSE"
+  ]
 }
