Fix git configuration for version bump workflows

--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -26,6 +26,12 @@ jobs:
           node-version: '18'
       
       - run: npm ci
+      
+      - name: Configure git
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          
       - run: npm version ${{ github.event.inputs.version_type }}
       - run: |
           git push
