--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@changesets/cli": "^2.29.7",
     "@strapi/typescript-utils": "^4.6.0",
     "@types/node": "^20.8.2",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3",
     "typescript": "5.0.4"
   },
   "peerDependencies": {
@@ -23,7 +25,7 @@
   "scripts": {
     "develop": "tsc -p tsconfig.server.json -w",
     "build": "tsc -p tsconfig.server.json",
-    "test": "echo \"No tests yet\" && exit 0",
+    "test": "jest",
     "changeset": "changeset",
     "version": "changeset version",
     "release:publish": "changeset publish",
@@ -65,6 +67,10 @@
     "url": "https://github.com/rkristelijn/strapi-health-plugin/issues"
   },
   "homepage": "https://github.com/rkristelijn/strapi-health-plugin#readme",
+  "jest": {
+    "testEnvironment": "node",
+    "testMatch": ["**/test/**/*.test.js"]
+  },
   "files": [
     "dist",
     "server",
